fixed some linting problems
https://zimlab.uni-graz.at/gams5/gams-management/gams-cms/gams-api/-/issues/42